fix calculator display overflowing

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    font-size: 2.5rem;
+    /* font-size: 2.5rem; */
 }
 
 #buttons {
